--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Scholar
-header-img: img/favicon.ico
+header-img: img/header-img.jpg
 email: toko.dougherty@gmail.com
 copyright_name: Toko Dougherty
 description: "Rebel to the system, cause the system sucks."
