--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
+title: Toko Dougherty
 email: toko.dougherty@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  A website detailing my thoughts.
+  A website. 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: toko.dougherty
